<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PXLWidgetView"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"/>
        <Button
            style="@style/NextButtonDefault"
            android:id="@+id/mosaic"
            android:textSize="14sp"
            android:paddingTop="16sp"
            android:paddingBottom="13dp"
            android:text="Mosaic"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            />
        <Button
            style="@style/NextButtonDefault"
            android:id="@+id/horizontal"
            android:textSize="14sp"
            android:paddingTop="16sp"
            android:paddingBottom="13dp"
            android:text="Horizontal"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            />
        <Button
            style="@style/NextButtonDefault"
            android:id="@+id/grid"
            android:textSize="14sp"
            android:paddingTop="16sp"
            android:paddingBottom="13dp"
            android:text="Grid"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            />

        <Button
            style="@style/NextButtonDefault"
            android:id="@+id/list"
            android:textSize="14sp"
            android:paddingTop="16sp"
            android:paddingBottom="13dp"
            android:text="List"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Advanced PXLWidgetView"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"/>
        <Button
            style="@style/NextButtonDefault"
            android:id="@+id/dynamic"
            android:textSize="14sp"
            android:paddingTop="16dp"
            android:paddingBottom="13dp"
            android:text="Design Utility"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            />
    </LinearLayout>
</ScrollView>