...
    <com.pixlee.pixleesdk.ui.widgets.PXLPhotoProductView
        android:id="@+id/pxlPhotoProductView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tvDebugTextViewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:background="@color/black_800"
        android:textColor="#ffffff"
...
