package com.pixlee.pixleeandroidsdk

import android.app.ListActivity
import android.view.View
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.IdlingResource
import androidx.test.espresso.UiController
import androidx.test.espresso.ViewAction
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.action.ViewActions.actionWithAssertions
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.activityScenarioRule
import androidx.test.filters.LargeTest
import com.pixlee.pixleeandroidsdk.pxlwidgetview.MosaicActivity
import com.pixlee.pixleeandroidsdk.tool.MyViewAction
import com.pixlee.pixleeandroidsdk.tool.OkHttpIdlingResourceRule
import com.pixlee.pixleeandroidsdk.tool.ScrollToBottomAction
import com.pixlee.pixleesdk.client.PXLClient
import com.pixlee.pixleesdk.data.api.AnalyticsEvents
import com.pixlee.pixleesdk.network.observer.AnalyticsObserver
import com.pixlee.pixleesdk.ui.viewholder.PXLPhotoViewHolder
import org.hamcrest.Matcher
import org.hamcrest.StringDescription
import org.hamcrest.core.StringContains
import org.junit.Rule
import org.junit.Test


/**
 * A test using the androidx.test unified API, which can execute on an Android device or locally using Robolectric.
 *
 * See [testing documentation](http://d.android.com/tools/testing).
 */
@LargeTest
class PXLWidgetViewTest {
    @get:Rule
    var activityScenarioRule = activityScenarioRule<IndexActivity>()

    @get:Rule
    var rule = OkHttpIdlingResourceRule()

    @Test
    fun testListHavingAnalyticsOff() {
        runTesting(hasAnalytics = false, menuId=R.id.list, hasLoadMore = true, hasLightBox = true)
    }

    @Test
    fun testList() {
        runTesting(menuId=R.id.list, hasLoadMore = false, hasLightBox = false)
    }

    @Test
    fun testGrid() {
        runTesting(menuId=R.id.grid, hasLoadMore = false, hasLightBox = false)
    }

    @Test
    fun testMosaic() {
        runTesting(menuId=R.id.mosaic, hasLoadMore = true, hasLightBox = true)
    }

    @Test
    fun testProductDetail() {
        runTesting(menuId=R.id.list, hasLoadMore = false, hasLightBox = true)
    }

    fun runTesting(hasAnalytics: Boolean = true, menuId: Int, hasLoadMore: Boolean, hasLightBox: Boolean) {
        // open grid widget
        PXLClient.autoAnalyticsEnabled = hasAnalytics
        onView(withId(menuId)).perform(waitUntil(isDisplayed())).perform(ViewActions.click())

        fun getEvent(eventName: String): String{
            return if (hasAnalytics) eventName else AnalyticsObserver.noEventsMessage
        }

        onView(withId(R.id.tvDebugText)).perform(waitUntil(isDisplayed())).check(matches(withText(StringContains.containsString(getEvent(AnalyticsEvents.openedWidget)))))
        onView(withId(R.id.tvDebugText)).perform(waitUntil(isDisplayed())).check(matches(withText(StringContains.containsString(getEvent(AnalyticsEvents.widgetVisible)))))
        onView(withId(R.id.tvDebugText)).check(matches(withText(StringContains.containsString(getEvent(AnalyticsEvents.widgetVisible)))))

        if(hasLoadMore) {
            // scroll down to load more photos
            onView(withId(R.id.widget)).perform(ScrollToBottomAction())
            onView(withId(R.id.tvDebugText)).perform(waitUntil(isDisplayed())).check(matches(withText(StringContains.containsString(getEvent(AnalyticsEvents.loadMore)))))
        }

        if (hasLightBox) {
            // open lightbox by clicking an item in list
            onView(withId(R.id.widget)).perform(RecyclerViewActions.actionOnItemAtPosition<PXLPhotoViewHolder>(0, MyViewAction.clickChildViewWithId(R.id.vListRoot)))
            onView(withId(R.id.tvDebugTextViewer)).perform(waitUntil(isDisplayed())).check(matches(withText(StringContains.containsString(getEvent(AnalyticsEvents.openedLightbox)))))
        }
    }


    fun waitUntil(matcher: Matcher<View>): ViewAction {
        return actionWithAssertions(object : ViewAction {
            override fun getConstraints(): Matcher<View> {
                return isAssignableFrom(View::class.java)
            }

            override fun getDescription(): String {
                val description = StringDescription()
                matcher.describeTo(description)
                return String.format("wait until: %s", description)
            }

            override fun perform(uiController: UiController, view: View) {
                if (!matcher.matches(view)) {
                    val callback = LayoutChangeCallback(matcher)
                    try {
                        IdlingRegistry.getInstance().register(callback)
                        view.addOnLayoutChangeListener(callback)
                        uiController.loopMainThreadUntilIdle()
                    } finally {
                        view.removeOnLayoutChangeListener(callback)
                        IdlingRegistry.getInstance().unregister(callback)
                    }
                }
            }
        })
    }

    private class LayoutChangeCallback constructor(val matcher: Matcher<View>) : IdlingResource, View.OnLayoutChangeListener {
        private var callback: IdlingResource.ResourceCallback? = null
        private var matched = false
        override fun getName(): String {
            return "Layout change callback"
        }

        override fun isIdleNow(): Boolean {
            return matched
        }

        override fun registerIdleTransitionCallback(callback: IdlingResource.ResourceCallback) {
            this.callback = callback
        }

        override fun onLayoutChange(v: View?, left: Int, top: Int, right: Int, bottom: Int, oldLeft: Int, oldTop: Int, oldRight: Int, oldBottom: Int) {
            matched = matcher.matches(v)
            callback!!.onTransitionToIdle()
        }
    }

}
